# BAEM

./: CMakeLists.txt  CMakePresets.json  PERFORMANCE_REPORT.md  README.md  baem_v3.hpp
.github/workflows/: ci.yml
baem_learning/: CMakeLists.txt  baem_learning.hpp  hand_simulator.hpp  natural_gradient_optimizer.hpp  online_trainer.hpp  poker_history_transformer.hpp  training_batch.hpp
baem_policy/: CMakeLists.txt  action_sampler.hpp  baem_policy.hpp  dkw_tracker.hpp  entropy_calculator.hpp  exploitation_gate.hpp  pointwise_optimizer.hpp
baem_tracker/: CMakeLists.txt  baem_tracker.hpp  bayesian_likelihood_model.hpp  belief_tracker.hpp  concept_drift_detector.hpp  convergence_monitor.hpp  exploitability_estimator.hpp  hand_history_encoder.hpp  kalman_penalty_filter.hpp  range_conditioner.hpp
benchmarks/: CMakeLists.txt  bench_hand_evaluator.cpp  bench_hpc_gates.cpp
gto_engine/: CMakeLists.txt  cfr_engine.hpp  gto_oracle.hpp
poker_core/: CMakeLists.txt  cards.hpp  deck_rng.hpp  game_state.hpp  hand_evaluator.hpp  hand_evaluator_fast.hpp  poker_core.hpp
simulation/: CMakeLists.txt  agent_pool.hpp  simulation_pipeline.hpp
tests/: CMakeLists.txt  test_baem_core.cpp  test_math_validation.cpp  test_week5_6.cpp  test_week7_8.cpp
tools/: CMakeLists.txt  README_TRAINING.md  STRONGEST.md  arena.sh  arena_v2.cpp  arena_v2.sh  blueprint.cpp  build.sh  cfr_solver.cpp  download_pokerbench.py  lbr_eval.cpp  play_pokerbench.cpp  poker_v2.hpp  prepare_pokerbench.py  prepare_pokerbench_csv.py  prepare_pokerbench_v2.py  probe_v2.cpp  pushfold_gto.hpp  pushfold_solver.cpp  resolve.cpp  river_solver.cpp  run_all.sh  run_v2.sh  setup.sh  table_play.cpp  train_pokerbench.cpp  train_v2.cpp  turn_solver.cpp
web/: baem_engine.js  baem_engine.wasm  build_wasm.sh  index.html  wasm_bridge.cpp
